sliders style on mobile fix

--- a/main.css
+++ b/main.css
@@ -290,11 +290,11 @@ p, span, li {
 
 @media (max-width: 768px) {
   .carousel-item {
-    height: 240px;
+    height: 230px;
   }
 
   .carousel-item .img-fluid {
-    height: 240px;
+    height: 230px;
   }
 }
 
